--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,34 @@
 
 <build>
     <plugins>
-    <plugin>
+
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <finalName>bankapp</finalName>
+                <archive>
+                    <manifest>
+                        <addClasspath>true</addClasspath>
+                        <mainClass>com.sample.BasicSample</mainClass>
+                        <classpathPrefix>dependency-jars/</classpathPrefix>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+
+        <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>3.0.0</version>
         <configuration>
@@ -27,12 +54,22 @@
         </configuration>
         <executions>
             <execution>
-                <id>make-assembly</id> <!-- this is used for inheritance merges -->
-                <phase>package</phase> <!-- bind to the packaging phase -->
                 <goals>
                     <goal>single</goal>
                 </goals>
+                <phase>package</phase>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.sample.BasicSample</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
             </execution>
+
         </executions>
     </plugin>
     </plugins>
